# home_lab

./: .gitignore  README.md  env_vars  langchain_test.ipynb  leetcode.ipynb  metaphor_mining.ipynb  pyproject.toml  requirements.txt
src/home_lab/: defaults.py
src/home_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
