[project]
name = "home-lab"
version = "0.1.0"
description = "My local Python package"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]